--- a/templates/admindashboard/newoffer.html
+++ b/templates/admindashboard/newoffer.html
@@ -41,14 +41,15 @@
                     <div class="card">
                       <div class="card-body">
                         <h4 class="card-title">Add New Offer</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="POST"  action="{% url 'create_offer' %}" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label for="exampleInputUsername1">Title</label>
-                                <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Title">
+                                <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Title" name="titre">
                             </div>
                             <div class="form-group">
                                 <label for="exampleTextarea1">Description</label>
-                                <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+                                <textarea class="form-control" id="exampleTextarea1" rows="4" name="description"></textarea>
                               </div>
                               <div class="form-group">
                                 <label for="exampleTextarea1">Offer Cost</label>
@@ -56,7 +57,7 @@
                                   <div class="input-group-prepend">
                                     <span class="input-group-text bg-primary text-white">$</span>
                                   </div>
-                                  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="prix">
                                   <div class="input-group-append">
                                     <span class="input-group-text">.00</span>
                                   </div>
@@ -64,24 +65,23 @@
                               </div>
                             <div class="form-group">
                                 <label for="exampleTextarea1">Category</label>
-                                    <select class="form-control">
-                                        <option>Category1</option>
-                                        <option>Category2</option>
-                                        <option>Category3</option>
-                                        <option>Category4</option>
+                                    <select class="form-control" name="categorie">
+                                        {% for category in categories %}
+                                        <option value="{{ category.id }}">{{ category.nom }}</option>
+                                        {% endfor %}
                                     </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputConfirmPassword1">Date Of start</label>
-                                <input class="form-control" placeholder="dd/mm/yyyy" />
+                                <input type="date" class="form-control" placeholder="dd/mm/yyyy" name="date_debut" />
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputConfirmPassword1">Date Of return</label>
-                                <input class="form-control" placeholder="dd/mm/yyyy" />
+                                <input type="date" class="form-control" placeholder="dd/mm/yyyy" name="date_fin" />
                             </div>
                             <div class="form-group">
                                 <label>File upload</label>
-                                <input type="file" name="img[]" class="file-upload-default">
+                                <input type="file" name="image" class="file-upload-default">
                                 <div class="input-group col-xs-12">
                                   <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
                                   <span class="input-group-append">
