--- a/templates/admindashboard/offers.html
+++ b/templates/admindashboard/offers.html
@@ -65,80 +65,32 @@
                         </thead>
                         <tbody>
                           <tr>
-                                <td> 02312 </td>
-                                <td> Agadir </td>
-                                <td> $14,500 </td>
-                                <td> Dashboard </td>
-                                <td> Credit card </td>
-                                <td> 04 Dec 2019 </td>
-                                <td class="d-flex">
-                                    <a class="nav-link" data-toggle="modal" href="#editOfferModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
+                                {% for offer in offers %}
+                                  <tr>
+                                    <td>{{ offer.id }}</td>
+                                    <td>{{ offer.titre }}</td>
+                                    <td>{{ offer.prix }}</td>
+                                    <td>{{ offer.categorie.nom }}</td>
+                                    <td>{{ offer.date_debut|date:"d M Y" }}</td>
+                                    <td>{{ offer.date_fin|date:"d M Y" }}</td>
+                                    <td class="d-flex">
+                                      <a class="nav-link" data-toggle="modal" href="#editOfferModal{{offer.id}}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
                                         <div class="badge badge-outline-success">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-grease-pencil"></i>
-                                            </span>
+                                          <span class="menu-icon">
+                                            <i class="mdi mdi-grease-pencil"></i>
+                                          </span>
                                         </div>
-                                    </a>
-                                    <a class="nav-link" data-toggle="modal" href="#deleteOfferModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
+                                      </a>
+                                      <a class="nav-link" data-toggle="modal" href="#deleteOfferModal{{offer.id}}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
                                         <div class="badge badge-outline-danger">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-delete"></i>
-                                            </span>
+                                          <span class="menu-icon">
+                                            <i class="mdi mdi-delete"></i>
+                                          </span>
                                         </div>
-                                    </a>
-                                </td>
-                                                            
-                          </tr>
-                          <tr>
-                            <td> 02312 </td>
-                            <td> Agadir </td>
-                            <td> $14,500 </td>
-                            <td> Dashboard </td>
-                            <td> Credit card </td>
-                            <td> 04 Dec 2019 </td>
-                            <td class="d-flex">
-                                <a class="nav-link" data-toggle="modal" href="#editOfferModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                    <div class="badge badge-outline-success">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-grease-pencil"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                                <a class="nav-link" data-toggle="collapse" href="#delete" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                    <div class="badge badge-outline-danger">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-delete"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                            </td>
-                                                        
-                          </tr>
-                          <tr>
-                            <td> 02312 </td>
-                            <td> Agadir </td>
-                            <td> $14,500 </td>
-                            <td> Dashboard </td>
-                            <td> Credit card </td>
-                            <td> 04 Dec 2019 </td>
-                            <td class="d-flex">
-                                <a class="nav-link" data-toggle="modal" href="#editOfferModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                    <div class="badge badge-outline-success">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-grease-pencil"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                                <a class="nav-link" data-toggle="collapse" href="#delete" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                    <div class="badge badge-outline-danger">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-delete"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                            </td>
-                                                        
-                          </tr>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                {% endfor %}
                         </tbody>
                       </table>
                     </div>
@@ -148,90 +100,101 @@
               </div>
               
             </div>
-            <div id="editOfferModal" class="modal fade" >
-                 <div class="modal-dialog" >
-                    <div class="modal-content">
-                            <div class="card">
-                            <div class="card-body">
-                                <h4 class="card-title">ُEdite Offer</h4>
-                                <form class="forms-sample">
-                                <div class="form-group">
-                                    <label for="exampleInputUsername1">Title</label>
-                                    <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Title">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleTextarea1">Description</label>
-                                    <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
-                                  </div>
-                                  <div class="form-group">
-                                    <label for="exampleTextarea1">Offer Cost</label>
-                                    <div class="input-group">
-                                      <div class="input-group-prepend">
-                                        <span class="input-group-text bg-primary text-white">$</span>
-                                      </div>
-                                      <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                      <div class="input-group-append">
-                                        <span class="input-group-text">.00</span>
-                                      </div>
-                                    </div>
-                                  </div>
-                                <div class="form-group">
-                                    <label for="exampleTextarea1">Category</label>
-                                        <select class="form-control">
-                                            <option>Category1</option>
-                                            <option>Category2</option>
-                                            <option>Category3</option>
-                                            <option>Category4</option>
-                                        </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputConfirmPassword1">Date Of start</label>
-                                    <input class="form-control" placeholder="dd/mm/yyyy" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputConfirmPassword1">Date Of return</label>
-                                    <input class="form-control" placeholder="dd/mm/yyyy" />
-                                </div>
-                                <div class="form-group">
-                                    <label>File upload</label>
-                                    <input type="file" name="img[]" class="file-upload-default">
-                                    <div class="input-group col-xs-12">
-                                      <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                                      <span class="input-group-append">
-                                        <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
-                                      </span>
-                                    </div>
-                                  </div>
-                                <button type="submit" class="btn btn-primary mr-2">Submit</button>
-                                <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
-                                </form>
+            {% for offer in offers %}
+            <div id="editOfferModal{{offer.id}}" class="modal fade" >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4 class="card-title">Edit Offer</h4>
+                      <form class="forms-sample" action="{% url 'edit_offer' offer.id %}" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-group">
+                          <label for="exampleInputUsername1">Title</label>
+                          <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Title" name="titre" value="{{ offer.titre }}">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleTextarea1">Description</label>
+                          <textarea class="form-control" id="exampleTextarea1" rows="4" name="description">{{ offer.description }}</textarea>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleTextarea1">Offer Cost</label>
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text bg-primary text-white">$</span>
                             </div>
+                            <input type="text" class="form-control" name="prix" aria-label="Amount (to the nearest dollar)" value="{{ offer.prix }}">
+                            <div class="input-group-append">
+                              <span class="input-group-text">.00</span>
                             </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleTextarea1">Category</label>
+                          <select class="form-control" name="categorie">
+                            {% for category in categories %}
+                                <option value="{{ category.id }}" {% if offer.categorie.id == category.id %} selected {% endif %}>{{ category.nom }}</option>
+                              {% endfor %}
+                          </select>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputConfirmPassword1">Date Of start</label>
+                          <input class="form-control" type="date" name="date_debut" value="{{ offer.date_debut|date:"Y-m-d" }}">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputConfirmPassword1">Date Of return</label>
+                          <input class="form-control" type="date" name="date_fin" value="{{ offer.date_fin|date:"Y-m-d" }}">
+                        </div>
+                        <div class="form-group">
+                          <label>Current Image</label>
+                          {% if offer.image %}
+                            <img src="{{ offer.image.url }}" alt="{{ offer.titre }}" class="img-thumbnail d-block">
+                          {% else %}
+                            <p class="ml-2 text-warning">No image available</p>
+                          {% endif %}
+                        </div>
+                        <div class="form-group">
+                          <label>File upload</label>
+                          <input type="file" name="image" class="file-upload-default">
+                          <div class="input-group col-xs-12">
+                            <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
+                            <span class="input-group-append">
+                              <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
+                            </span>
+                          </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary mr-2">Submit</button>
+                        <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
+                      </form>
                     </div>
-                 </div>
-            </div>
-            <div id="deleteOfferModal" class="modal fade">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <form method="get" id="DeleteAssistantForm">
-                      
-                      <div class="modal-header">						
-                        <h4 class="modal-title">Delete Offer</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                      </div>
-                      <div class="modal-body">					
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
-                      </div>
-                      <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-danger" value="Delete">
-                      </div>
-                    </form>
                   </div>
                 </div>
               </div>
             </div>
+            {% endfor %}
+            {% for offer in offers %}
+            <div id="deleteOfferModal{{ offer.id }}" class="modal fade">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <form method="get" id="DeleteAssistantForm" action="{% url 'delete_offer' offer.id %}" method="POST" >
+                    {% csrf_token %}
+                    <div class="modal-header">						
+                      <h4 class="modal-title">Delete Offer</h4>
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">					
+                      <p>Are you sure you want to delete this Offer?</p>
+                      <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                      <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                      <input type="submit" class="btn btn-danger" value="Delete">
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
